# HTTP-PyServer

./: .gitignore  README.md  pyproject.toml
src/server/: __init__.py  cache.py  render.py  request.py  response.py  response_codes.py  response_messages.py  responses.py  routes.py  server.py  sessions.py  template.py
tests/: example.py  main.py
